# arcae

./: .cirrus.star  .cirrus.yml  .dockerignore  .env  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  HISTORY.rst  LICENSE  MANIFEST.in  README.rst  build.py  pyproject.toml  pyproject.toml.bak  requirements.txt  script.sh  setup.cfg  setup.py  tbump.toml
.cirrus/: ci.yml
.github/workflows/: ci.yml  deploy.yml  upload.yml  wheels.yml
arcae/: CMakeLists.txt  __init__.py  arrow_tables.pxd  arrow_tables.pyx  casa_tables.pxd  config.py
arcae/applications/: entrypoint.py  ms_export.py
arcae/tests/: conftest.py  test_descriptors.py  test_pytable.py  test_sanity.py
casa_arrow/: CMakeLists.txt  __init__.py  arrow_tables.pyx  casa_table.pxd  config.py
casa_arrow/applications/: entrypoint.py  ms_export.py
casa_arrow/tests/: conftest.py  test_pytable.py
ci/scripts/: before-all-linux.sh  before-all-macos.sh  run-tests.sh  run_cibuildwheel.sh  run_tests.sh
ci/vcpkg/: CMakeLists.txt
ci/vcpkg/custom-ports/casacore/: 001-casacore-cmake.patch  portfile.cmake
ci/vcpkg/custom-triplets/: x64-linux-cxx17-abi0.cmake  x64-linux-cxx17-abi1.cmake  x64-linux-dynamic-cxx17-abi0.cmake
cmake/: SetupVCPKG.cmake
cmake_modules/: FindPyArrow.cmake  SetupVCPKG.cmake
cpp/: CMakeLists.txt  casa_visitors.cpp  column_convert_visitor.cpp  column_convert_visitor.h  complex_type.cpp  complex_type.h  configuration.cpp  configuration.h  descriptor.cpp  descriptor.h  safe_table_proxy.cpp  safe_table_proxy.h  service_locator.cpp  service_locator.h  table_factory.cpp  table_factory.h
cpp/arcae/: array_util.cc  array_util.h  base_column_map.cc  base_column_map.h  casa_visitors.cc  casa_visitors.h  column_convert_visitor.cc  column_convert_visitor.h  column_mapper.cc  column_mapper.h  column_mapper_2.h  column_read_map.cc  column_read_map.h  column_read_visitor.cc  column_read_visitor.h  column_shape.cc  column_shape.h  column_write_map.cc  column_write_map.h  column_write_visitor.cc  column_write_visitor.h  complex_type.cc  complex_type.h  configuration.cc  configuration.h  data_partition.cc  data_partition.h  descriptor.cc  descriptor.h  finally.h  group_sort.cc  group_sort.h  isolated_table_proxy.cc  isolated_table_proxy.h  map_iterator.h  new_convert_visitor.cc  new_convert_visitor.h  new_table_proxy.cc  new_table_proxy.h  partition_sort.cc  (+25 more)
cpp/tests/: CMakeLists.txt  basic_test.cc  colmap2_test.cc  column_convert_test.cc  column_iterator_test.cc  column_map_test.cc  column_read_test.cc  column_rw_test.cc  column_shape_test.cc  column_write_test.cc  concurrent_rw_test.cc  configuration_test.cc  data_partition_test.cc  dev_transpose_test.cc  group_sort_test.cc  in_place_test.cc  isolated_table_proxy_test.cc  new_table_proxy_test.cc  parallel_write_test.cc  partition_sort_test.cc  range_table_test.cc  range_test.cc  result_shape_test.cc  rwlock_test.cc  selection_test.cc  shared_fcntl_mutex_test.cc  test_utils.cc  test_utils.h  transpose_test.cc  var_write_test.cc
docker/: create_wheels.sh  py310-wheel-manylinux2014.docker  py310_cxx11_wheel.docker  py38-wheel-manylinux2014.docker  py39-wheel-manylinux2014.docker  python-wheel-manylinux2014.docker
scripts/: run_cibuildwheel.sh
src/: CMakeLists.txt  casa_arrow.cpp  casa_arrow.h  casa_visitors.cpp  casa_visitors.h  column_convert_visitor.cpp  column_convert_visitor.h  complex_type.cpp  complex_type.h  configuration.cpp  configuration.h  pytable.cpp  safe_table_proxy.cpp  safe_table_proxy.h  scalar_buffer.h  service_locator.cpp  service_locator.h  type_converters.h
src/arcae/: CMakeLists.txt  __init__.py  arrow_tables.pxd  arrow_tables.pyx  config.py  testing.py
src/arcae/applications/: entrypoint.py  ms_export.py
src/arcae/lib/: CMakeLists.txt  arrow_tables.exp  arrow_tables.map  arrow_tables.pxd  arrow_tables.pyx  merge_sort.cc
src/arcae/tests/: conftest.py  test_casting.py  test_descriptor.py  test_group_sort.py  test_multithreaded_read.py  test_multithreaded_writes.py  test_partition_sort.py  test_pytable.py
src/tests/: CMakeLists.txt  test_runner.cpp
vcpkg/: vcpkg.json
vcpkg/custom-ports/casacore/: 001-casacore-cmake.patch  portfile.cmake
vcpkg/custom-triplets/: x64-linux-cxx17-abi0.cmake  x64-linux-dynamic-cxx17-abi0.cmake
vcpkg/manifest/: vcpkg.json
vcpkg/overlay-ports/casacore/: 001-casacore-cmake.patch  portfile.cmake  vcpkg.json
vcpkg/overlay-ports/cfitsio/: portfile.cmake  vcpkg.json
vcpkg/overlay-ports/wcslib/: 001-modern-configs.patch  portfile.cmake  vcpkg.json
vcpkg/overlay-triplets/: arm64-linux-cxx20-abi1-rel.cmake  arm64-linux-dynamic-cxx17-abi1-dbg.cmake  arm64-linux-dynamic-cxx17-abi1-rel.cmake  arm64-linux-dynamic-cxx20-abi1-dbg.cmake  arm64-linux-dynamic-cxx20-abi1-rel.cmake  arm64-osx-cxx20-abi1-rel.cmake  arm64-osx-dynamic-cxx17-abi0-dbg.cmake  arm64-osx-dynamic-cxx17-abi0-rel.cmake  arm64-osx-dynamic-cxx17-abi1-dbg.cmake  arm64-osx-dynamic-cxx17-abi1-rel.cmake  arm64-osx-dynamic-cxx20-abi1-dbg.cmake  arm64-osx-dynamic-cxx20-abi1-rel.cmake  universal2-osx-dynamic-cxx17-abi1-rel.cmake  universal2-osx-dynamic-cxx20-abi1-rel.cmake  x64-linux-cxx17-abi1.cmake  x64-linux-cxx20-abi1-rel.cmake  x64-linux-dynamic-cxx17-abi0-dbg.cmake  x64-linux-dynamic-cxx17-abi0-rel.cmake  x64-linux-dynamic-cxx17-abi1-dbg.cmake  x64-linux-dynamic-cxx17-abi1-rel.cmake  x64-linux-dynamic-cxx20-abi1-dbg.cmake  x64-linux-dynamic-cxx20-abi1-rel.cmake  x64-osx-cxx20-abi1-rel.cmake  x64-osx-dynamic-cxx17-abi0-dbg.cmake  x64-osx-dynamic-cxx17-abi0-rel.cmake  x64-osx-dynamic-cxx17-abi1-dbg.cmake  x64-osx-dynamic-cxx17-abi1-rel.cmake  x64-osx-dynamic-cxx20-abi1-dbg.cmake  x64-osx-dynamic-cxx20-abi1-rel.cmake
