[project]
name = "arcae"
version = "0.2.2"
authors = [
    {name = "Simon Perkins", email = "simon.perkins@gmail.com"}
]
description = "Arrow bindings for casacore"
readme = {file = "README.rst", content-type = "text/x-rst"}
requires_python = ">= 3.8"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3"
]
dependencies = [
    "appdirs",
    "click",
    "rich",
    "pyarrow == 14.0.1"
]

[project.optional-dependencies]
dev = [
    "black == 22.1.0",
    "flake8 == 4.0.1",
    "tbump"
]
test = [
    "duckdb",
    "pytest >= 7.0.0",
    "python-casacore >= 3.5.0",
    "requests"
]

[project.scripts]
arcae = "arcae.applications.entrypoint:main"

[project.urls]
Repository = "https://github.com/ratt-ru/arcae"

[build-system]
requires = [
    "cython>=3.0.2",
    "scikit-build-core",
    "pyarrow == 14.0.1"]
build-backend = "scikit_build_core.build"

[tools.setuptools.packages]
find = {}

[tool.scikit-build]
# build-dir = "/tmp/arcae"