[project]
name = "arcae"
version = "0.2.5"
authors = [
    {name = "Simon Perkins", email = "simon.perkins@gmail.com"}
]
description = "Arrow bindings for casacore"
readme = {file = "README.rst", content-type = "text/x-rst"}
requires_python = ">= 3.10"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3"
]
dependencies = [
    "appdirs",
    "numpy >= 2.0.0",
    "pyarrow == 16.1.0"
]

[project.optional-dependencies]
applications = [
    "click",
    "rich",
]
dev = [
    "pre-commit",
    "tbump"
]
test = [
    "duckdb",
    "pytest >= 7.0.0",
    "python-casacore >= 3.5.0; sys_platform != 'darwin' and python_version<'3.12'",
    "requests"
]

[project.scripts]
arcae = "arcae.applications.entrypoint:main"

[project.urls]
Repository = "https://github.com/ratt-ru/arcae"

[build-system]
requires = [
    "cython>=3.0.2, < 3.0.10",
    "scikit-build-core",
    "numpy >= 2.0.0",
    "pyarrow == 16.1.0"]
build-backend = "scikit_build_core.build"

[tools.setuptools.packages]
find = {}

[tool.scikit-build]
# build-dir = "/tmp/arcae"
cmake.minimum-version = "3.26.1"
cmake.build-type = "RelWithDebInfo"
install.strip = false
