[metadata]
name = arcae
version = attr: arcae.__version__
author = Simon Perkins
author_email = simon.perkins@gmail.com
url = https://github.com/ratt-ru/arcae
description = Example package description
long_description = file: README.rst
long_description_content_type = text/x-rst
# keywords = example, setuptools
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
python_requires >= 3.8
include_package_data = True
install_requires =
    appdirs
    click
    rich
    pyarrow == 12.0.0

[options.entry_points]
console_scripts =
    arcae = arcae.applications.entrypoint:main

[options.extras_require]
dev =
    black==22.1.0
    flake8==4.0.1
test =
    duckdb
    pytest >= 7.0.0
    python-casacore >= 3.5.0
    requests

# [options.package_data]
# example = data/schema.json, *.txt
# * = README.md
